# SPlayer

./: .gitignore  init-android.sh  init-config.sh
android/: compile-splayer.sh
android/contrib/: compile-ffmpeg.sh
android/contrib/tools/: do-compile-ffmpeg.sh  do-detect-env.sh  do-ndk-standalone-toochain.sh
android/splayer/: .gitignore  settings.gradle
android/splayer/app/: build.gradle
android/splayer/app/src/main/: AndroidManifest.xml
android/splayer/app/src/main/java/com/bullfrog/splayer/: MainActivity.kt
android/splayer/app/src/main/res/values/: strings.xml
android/splayer/splayer-native/: build.gradle
android/splayer/splayer-native/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/splayer/splayer_armv7a/: build.gradle
android/splayer/splayer_armv7a/src/main/: AndroidManifest.xml
config/: module-default.sh  module-lite.sh  module-min.sh
splayer/: .gitignore  build.gradle
splayer/app/: build.gradle
splayer/app/src/androidTest/java/com/bullfrog/example/: ExampleInstrumentedTest.kt
splayer/app/src/androidTest/java/com/bullfrog/splayer/: ExampleInstrumentedTest.kt
splayer/app/src/androidTest/java/com/bzh/example/: ExampleInstrumentedTest.kt
splayer/app/src/main/: AndroidManifest.xml
splayer/app/src/main/java/com/bullfrog/example/: MainActivity.kt
splayer/app/src/main/java/com/bullfrog/splayer/: MainActivity.kt
splayer/app/src/main/java/com/bzh/example/: MainActivity.kt
splayer/app/src/test/java/com/bullfrog/example/: ExampleUnitTest.kt
splayer/app/src/test/java/com/bullfrog/splayer/: ExampleUnitTest.kt
splayer/gradle/wrapper/: gradle-wrapper.properties
splayer/splayer-ffmpeg-output/ffmpeg-x86_64/include/libavutil/: ffversion.h
splayer/splayer-native/: build.gradle
splayer/splayer-native/src/main/: AndroidManifest.xml
splayer/splayer-native/src/main/cpp/: CMakeLists.txt  GlobalPlayerField.h  a_global_player_jni.cpp  global_player_field.h  native-lib.cpp  s_global_exception.cpp  s_global_exception.h  s_global_player.cpp  s_global_player.h  s_global_player_field.h  s_global_player_jni.cpp  s_log.h  s_media_player.cpp  s_media_player.h  s_player_jni.cpp  splayer_jni.cpp
splayer/splayer-native/src/main/java/com/bullfrog/splayer/: SPlayer.java  SPlayer.kt
splayer/splayer-native/src/main/java/com/bzh/splayer/: SPlayer.java
tools/: pull-repo-base.sh  pull-repo-ref.sh
